fixing portfolio item z-index problem - links were not clickable as maintextpane was on top

--- a/JJ-theme/css/styles.css
+++ b/JJ-theme/css/styles.css
@@ -571,6 +571,7 @@ a .nextItem:hover span.point {
 
 .js .portfolioItem {
 	display: none;
+	position: relative;
 }
 
 .js #firstItem {
